[package]
name = "twtarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
diesel = { version = "2.0.2", features = ["chrono", "postgres"] }
dotenvy = "0.15.6"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
snafu = "0.7.3"
url = { version = "2.3.1", features = ["serde"] }
