[package]
name = "twtarc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.29", features = ["derive"] }
comfy-table = "6.1.3"
diesel = { version = "2.0.2", features = ["chrono", "postgres"] }
diesel-async = { version = "0.1.1", features = ["mobc", "postgres"] }
dotenvy = "0.15.6"
futures = "0.3.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.89"
snafu = "0.7.3"
tokio = { version = "1", features = ["full"] }
twitter-v2 = "0.1.8"
url = { version = "2.3.1", features = ["serde"] }
